--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Hello, Git</h1>
+    <h1 style="color: red;">Hello, Git</h1>
     <p>This is a change</p>
 </body>
 </html>
