--- a/home.html
+++ b/home.html
@@ -9,5 +9,10 @@
 <body>
     <h1 style="color: red;">Hello, Git</h1>
     <p>This is a change</p>
+    <ol>
+        <li>wake up</li>
+        <li>take breakfast</li>
+        <li>study</li>
+    </ol>
 </body>
 </html>
