--- a/home.html
+++ b/home.html
@@ -7,7 +7,12 @@
     <title>Home</title>
 </head>
 <body>
-    <h1 style="color: red;">Hello, Git</h1>
+    <h1>Hello, Git</h1>
     <p>This is a change</p>
 </body>
+<style>
+    h1{
+        color: red;
+    }
+</style>
 </html>
