--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-
+    <main>
     <h1>Hello, Github</h1>
     <p>This is a change</p>
     <ol>
@@ -15,6 +15,7 @@
         <li>Take breakfast</li>
         <li>Study</li>
     </ol>
+    </main>
 </body>
 <style>
     h1{
