--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
         <li>Wake up</li>
         <li>Take breakfast</li>
         <li>Study</li>
+        <li>Have lunch</li>
     </ol>
 </body>
 <style>
