add the list change

--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
         <li>Take breakfast</li>
         <li>Study</li>
         <li>Have lunch</li>
+        <li>Bruch teeh</li>
     </ol>
 </body>
 <style>
