add changes -add go to gyn-

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <li>Wake up</li>
         <li>Take breakfast</li>
         <li>Study</li>
-        <li>Have lunch</li>
+        <li>go to gyn</li>
     </ol>
 </body>
 <style>
